添加页面流程&过场动画

--- a/app/src/main/res/layout/activity_business_travel_reimb_fee_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_fee_info.xml
@@ -47,7 +47,9 @@
             android:text="@string/btn_next"
             android:textSize="@dimen/custom_apply_next_btn_text_size"
             android:textColor="@color/color_white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="@{feeInfoViewModel::onNextClick}"
+            />
     </LinearLayout>
 
 </layout>
