--- a/app/src/main/res/layout/activity_public_service_apply_fee.xml
+++ b/app/src/main/res/layout/activity_public_service_apply_fee.xml
@@ -21,7 +21,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/custom_activity_padding">
+            android:padding="@dimen/custom_activity_padding"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            >
 
             <TextView
                 android:id="@+id/title_public_service_apply_guest_count_txt"
@@ -172,7 +175,9 @@
                 android:text="@string/btn_next"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/custom_apply_next_btn_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="@{viewModel::onNextClick}"
+                />
 
         </RelativeLayout>
     </LinearLayout>
