--- a/app/src/main/res/layout/activity_business_travel_apply_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_apply_info.xml
@@ -136,7 +136,9 @@
                 android:text="@string/btn_next"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/custom_apply_next_btn_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="@{viewModel::onNextClick}"
+                />
         </RelativeLayout>
 
     </LinearLayout>
