--- a/app/src/main/res/layout/activity_business_travel_reimb_address_time.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_address_time.xml
@@ -127,9 +127,11 @@
                 android:background="@drawable/bg_next_btn"
                 android:gravity="center"
                 android:text="@string/btn_next"
-                android:textColor="@android:color/black"
+                android:textColor="@color/color_white"
                 android:textSize="@dimen/custom_apply_title_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="@{timeAddrViewModel::onNextClick}"
+                />
 
         </RelativeLayout>
     </LinearLayout>
