--- a/app/src/main/res/layout/activity_business_travel_reimb_info.xml
+++ b/app/src/main/res/layout/activity_business_travel_reimb_info.xml
@@ -170,7 +170,9 @@
             android:text="@string/btn_next"
             android:textSize="@dimen/custom_apply_next_btn_text_size"
             android:textColor="@color/color_white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="@{baseInfoViewModel::onNextClick}"
+            />
     </RelativeLayout>
     </LinearLayout>
 
