--- a/app/src/main/res/layout/activity_public_service_reimb_fee_info.xml
+++ b/app/src/main/res/layout/activity_public_service_reimb_fee_info.xml
@@ -184,7 +184,9 @@
                 android:text="@string/btn_next"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/custom_apply_next_btn_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="@{feeInfoViewModel::onNextClick}"
+                />
 
         </RelativeLayout>
 
