--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -67,5 +67,15 @@
     <dimen name="account_table_txt_size">12dp</dimen>
     <dimen name="account_table_img_txt_margin">8dp</dimen>
 
+    <!--快接入口页面-->
+    <dimen name="shortcut_item_height">64dp</dimen>
+    <dimen name="shortcut_img_size">44dp</dimen>
+    <dimen name="shortcut_txt_size">12dp</dimen>
+    <dimen name="shortcut_cancel_img_size">32dp</dimen>
+    <dimen name="shortcut_cancel_img_padding">4dp</dimen>
+    <dimen name="shortcut_cancel_bottom_margin">12dp</dimen>
+    <dimen name="shortcut_first_item_bottom_margin">140dp</dimen>
+    <dimen name="shortcut_second_item_bottom_margin">60dp</dimen>
+
 
 </resources>
